syntax = "proto2";

package innerpeacer.mapdata.pbf;

message TYRenderingSymbolsPbf {
required string mapID = 1;
repeated TYFillSymbolPbf fillSymbols = 2;
repeated TYIconSymbolPbf iconSymbols = 3;

}

message TYFillSymbolPbf {
required uint32 symbolID = 1;
required string fillColor = 2;
required string outlineColor = 3;
required float lineWidth = 4;

}

message TYIconSymbolPbf {
required uint32 symbolID = 1;
required string icon = 2;
}